--- a/Views/MainWindow.axaml
+++ b/Views/MainWindow.axaml
@@ -195,7 +195,7 @@
 						</shadui:SidebarItem.Icon>
 					</shadui:SidebarItem>
 					<shadui:SidebarItem
-						Command="{CompiledBinding OpenItemPurchaseCommand}"
+						Command="{CompiledBinding OpenProductPurchaseCommand}"
 						Content="Item Purchase"
 						FontSize="15"
 						ToolTip.Tip="{CompiledBinding $parent[shadui:Sidebar].Expanded, Converter={x:Static converters:BooleanConverters.NullOrString}, ConverterParameter='Item Purchase'}">
