refactor(equipment-inventory-view): replace value of DataContext viewmodel ItemInventory with the correct one, which is, EquipmentInventory

--- a/Views/EquipmentInventoryView.axaml
+++ b/Views/EquipmentInventoryView.axaml
@@ -11,7 +11,7 @@
     x:Class="AHON_TRACK.Views.EquipmentInventoryView">
     
     <Design.DataContext>
-        <viewModels:ItemPurchaseViewModel />
+        <viewModels:EquipmentInventoryViewModel />
     </Design.DataContext>
     
     <UserControl.Resources>
