fix(manage-billing-view): set DataGrid IsReadOnly property to True to disable user-edit

--- a/Views/ManageBillingView.axaml
+++ b/Views/ManageBillingView.axaml
@@ -282,6 +282,7 @@
                                                                 GridLinesVisibility="All"
                                                                 ItemsSource="{CompiledBinding InvoiceList}"
                                                                 SelectionMode="Single"
+                                                                IsReadOnly="True"
                                                                 Background="{DynamicResource CardBackgroundColor}"
                                                                 RowBackground="{DynamicResource CardBackgroundColor}"
                                                                 HeadersVisibility="Column"
