--- a/Views/ProductPurchaseView.axaml
+++ b/Views/ProductPurchaseView.axaml
@@ -49,7 +49,7 @@
             <TextBlock
                 FontSize="30"
                 FontWeight="SemiBold"
-                Text="Item Purchase"
+                Text="Product Purchase"
                 Foreground="{StaticResource FontForeground}"
                 Margin="90,30,0,0" />
             <TextBlock
